[package]
name = "cxxenum-test"
version = "0.1.0"
edition = "2024"

[dependencies]
# cxxenum = { path = "./cxxenum-macro" }
cxx = { git = "https://github.com/Ryex/cxx.git", branch = "enum_variants", features = [
  "c++17",
] }
# cxx = { path = "../cxx/", features = ["c++17"] }
# cxx = { version = "1", features = ["c++17"] }

[build-dependencies]
cxx-build = { git = "https://github.com/Ryex/cxx.git", branch = "enum_variants" }
# cxx-build = { path = "../cxx/gen/build" }
# cxx-build = { version = "1" }
